--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
         <meta HTTP-EQUIV="expires" CONTENT="0"> -->
         <link rel="shortcut icon" href="favicon.ico"  type="image/x-icon"> 
-        <title>追默科技</title>
+        <title>DreamX 梦未来电商创业平台</title>
           <!-- 使用CDN加速的CSS文件，配置在vue.config.js下 -->
         <% for (var i in
         htmlWebpackPlugin.options.cdn &&  htmlWebpackPlugin.options.cdn.css) { %>
